--- a/backpage/pom.xml
+++ b/backpage/pom.xml
@@ -8,10 +8,10 @@
         <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.tjuLab</groupId>
-    <artifactId>checkin</artifactId>
+    <groupId>backpage</groupId>
+    <artifactId>backpage</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>checkin</name>
+    <name>backpage</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
